--- a/groupdata.tex
+++ b/groupdata.tex
@@ -7,8 +7,8 @@
  \makecell{Stormark} & \makecell{Tale} & \makecell{2100169} \\\hline
  \makecell{Cifuentes} & \makecell{Vannesa} & \makecell{2080663} \\\hline
  \makecell{Bawm} & \makecell{Rose Mary} & \makecell{2073067} \\\hline
- \makecell{Doe} & \makecell{John} & \makecell{123456} \\\hline
- \makecell{Doe} & \makecell{Jane} & \makecell{123456} \\\hline
+ \makecell{Sompura} & \makecell{Maulik} & \makecell{2071435} \\\hline
+ \makecell{Manthara} & \makecell{Christy Jo} & \makecell{2080644} \\\hline
  \makecell{Doe} & \makecell{John} & \makecell{123456} \\\hline
 
 
